<resources>
    <string name="app_name">exampleSource</string>
    <string name="add_your_payment_methods">Add your payment methods</string>
    <string name="_4444_4444_4444_4444">4444 4444 4444 4444</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="add_card">ADD CARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>