<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.PaymentFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/add_your_payment_methods"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_card"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_card"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:hint="@string/_4444_4444_4444_4444"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_expiry"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toStartOf="@id/cvc_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_card">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvc_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/til_expiry"
        app:layout_constraintTop_toBottomOf="@id/til_card">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/cvc_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/cvc"
            android:inputType="numberPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_card"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="224dp"
        android:backgroundTint="#F9B233"
        android:text="@string/add_card"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:cornerRadius="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/til_expiry" />

</androidx.constraintlayout.widget.ConstraintLayout>